[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/ArmWrestle.gd" type="Script" id=1]

[node name="ArmWrestle" type="Node2D"]
script = ExtResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 24.7839
margin_top = 24.5679
margin_right = 332.784
margin_bottom = 77.5679
value = 50.0

[node name="WrestleTap" type="Button" parent="."]
margin_left = 31.7839
margin_top = 121.596
margin_right = 329.784
margin_bottom = 594.596
action_mode = 0
text = "Tap!"
[connection signal="changed" from="ProgressBar" to="." method="_on_ProgressBar_changed"]
[connection signal="button_down" from="WrestleTap" to="." method="_on_WrestleTap_button_down"]
